--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,7 +43,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=false
-startup.import.system.data=true
+startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
