--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -108,7 +108,7 @@ json.pretty.print=true
 # -----------------------------------------------------------------------------
 # INTEGRATIONS
 # -----------------------------------------------------------------------------
-integration.google.geocoding.code.import.data=false
+integration.google.geocoding.code.import.data=true
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
 integration.google.geocoding.api.day.batch.limit=250
