--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,7 +43,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=false
-startup.import.system.data=true
+startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
@@ -108,7 +108,7 @@ json.pretty.print=true
 # -----------------------------------------------------------------------------
 # INTEGRATIONS
 # -----------------------------------------------------------------------------
-integration.google.geocoding.code.import.data=true
+integration.google.geocoding.code.import.data=false
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
 integration.google.geocoding.api.day.batch.limit=250
