--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -44,15 +44,11 @@ startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
-# MAINTENANCE
-# -----------------------------------------------------------------------------
-maintenance.run=false
-
-# -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
 # -----------------------------------------------------------------------------
 import.institutionDomicile.location=xml/iso/isoCountryCode.xml
 import.countryCurrency.location=xml/iso/countryCurrency.csv
+import.advertCategory.location=xml/advertCategories/advertCategory.csv
 
 # -----------------------------------------------------------------------------
 # CUSTOM FORMS
@@ -69,8 +65,6 @@ maintenance.shutdown.timeout=5000
 # -----------------------------------------------------------------------------
 # EXPORT SETTINGS
 # -----------------------------------------------------------------------------
-xml.export.exporter=com.zuehlke.pgadmissions.services.ApplicationExportServiceMock
-
 xml.export.system.reference=Having considered the whole application, including both written and spoken feedback from referees, we are happy to make an appointment based upon the information available to us.
 xml.export.system.qualification=We consider that the applicant has experience equivalent to the typical academic entrance requirements for our program. It is therefore our recommendation that an appointment be made.
 
@@ -108,16 +102,3 @@ system.default.email.content.directory=email/content/
 # SERIALIZATION SETTINGS
 # -----------------------------------------------------------------------------
 json.pretty.print=true
-
-# -----------------------------------------------------------------------------
-# INTEGRATIONS
-# -----------------------------------------------------------------------------
-integration.google.geocoding.code.import.data=false
-integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
-integration.google.geocoding.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
-integration.google.geocoding.api.day.batch.limit=250
-integration.google.geocoding.api.request.delay.ms=100
-
-integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
-integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
-integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
