--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
         <tag>HEAD</tag>
     </scm>
 
+	<!-- Repository for Scribe - OAuth Support -->
+	<repositories>
+	  <repository>
+	    <id>scribe-java-mvn-repo</id>
+	    <url>https://raw.github.com/fernandezpablo85/scribe-java/mvn-repo/</url>
+	    <snapshots>
+	      <enabled>true</enabled>
+	      <updatePolicy>always</updatePolicy>
+	    </snapshots>
+	  </repository>
+	</repositories>
+
     <dependencies>
 
         <!-- Hibernate -->
@@ -352,6 +364,12 @@
             <version>1.3.170</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+		  <groupId>org.scribe</groupId>
+		  <artifactId>scribe</artifactId>
+		  <version>1.3.6</version>
+		</dependency>
+
 
     </dependencies>
 
