--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -43,7 +43,7 @@ hibernate.search.default.indexBase=C:/prismIndexes/
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.workflow.initialize.notifications=false
-startup.import.system.data=true
+startup.import.system.data=false
 startup.hibernate.search.initialize=false
 
 # -----------------------------------------------------------------------------
@@ -114,12 +114,7 @@ integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocod
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
 integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
-integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
-
-linkedin.company.uri.prefix=http://www.linkedin.com/company/
-integration.linkedin.api.token=f1a2d593-4c66-469d-a71e-57aeaed48d49
-integration.linkedin.companies.api.uri=https://api.linkedin.com/v1/companies
