--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -116,3 +116,5 @@ integration.google.search.api.cse.key=014399221313847880480:klv9napshqc&q
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
+
+integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
