--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -49,7 +49,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=false
+maintenance.run=true
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
@@ -118,3 +118,5 @@ integration.google.search.api.uri=https://www.googleapis.com/customsearch/v1
 integration.yahoo.exchange.rate.api.uri=https://query.yahooapis.com/v1/public/yql
 integration.yahoo.exchange.rate.api.schema=store://datatables.org/alltableswithkeys
 integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
+
+integration.linked.in.people.search.uri=https://www.linkedin.com/pub/dir/
