--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -17,7 +17,7 @@ context.environment=dev
 # EMAIL SETTINGS
 # -----------------------------------------------------------------------------
 email.sender=com.zuehlke.pgadmissions.mail.MailMockSender
-email.broken.link.message=If the links in this message do not work in your email client copy and paste them into your browser address bar.
+email.broken.link.message=If you are unable to follow the links in this message, copy and paste them into your browser address bar.
 
 email.server=localhost
 email.port=25
@@ -49,7 +49,7 @@ startup.hibernate.search.initialize=false
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
