--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -84,7 +84,7 @@ integration.yahoo.exchange.rate.api.table=yahoo.finance.xchange
 integration.amazon.on=false
 integration.amazon.bucket=prism-document-loc
 integration.amazon.production.bucket=prism-document
-integration.amazon.email.bounce.queue=https://sqs.eu-west-1.amazonaws.com/436642438006/prism-mail-bounces
+integration.amazon.email.bounce.queue=
 
 
 auth.facebook.appSecret=b5c7321c5526298a5ba37db405b7d533
