--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,7 +22,7 @@ email.source=prism@alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
