--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -22,7 +22,7 @@ email.source=prism-uat-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
 
 # -----------------------------------------------------------------------------
