--- a/src/environments/environment.sit.properties
+++ b/src/environments/environment.sit.properties
@@ -24,6 +24,8 @@ email.source=
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.import.system.data=false
+startup.display.initialize=false
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
