--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -24,6 +24,8 @@ email.source=prism-uat-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=true
 startup.import.system.data=false
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
