--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -24,6 +24,8 @@ email.source=prism-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.import.system.data=false
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
