--- a/src/test/resources/environment.test.properties
+++ b/src/test/resources/environment.test.properties
@@ -27,6 +27,8 @@ email.source=prism@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.import.system.data=false
+startup.display.initialize=false
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
