--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,6 @@
             <artifactId>spring-social-twitter</artifactId>
             <version>1.1.0.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-security</artifactId>
@@ -357,6 +356,11 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.9.21</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-translate</artifactId>
+            <version>v2-rev41-1.20.0</version>
+        </dependency>
 
     </dependencies>
 
