--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -25,7 +25,7 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 startup.workflow.initialize=true
 startup.import.system.data=false
 startup.display.initialize=true
-startup.display.initialize.drop=false
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
