--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,10 +22,10 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.import.system.data=false
-startup.display.initialize=true
-startup.display.initialize.drop=true
+startup.display.initialize=false
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
