--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -24,8 +24,8 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.workflow.initialize=false
 startup.import.system.data=false
-startup.display.initialize=false
-startup.display.initialize.drop=false
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
