--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -22,8 +22,9 @@ email.source=prism-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.workflow.initialize=true
 startup.import.system.data=false
+
+startup.workflow.initialize=false
 startup.display.initialize=true
 startup.display.initialize.drop=true
 
