--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -24,9 +24,9 @@ email.source=prism-uat-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.import.system.data=false
 
-startup.workflow.initialize=true
+startup.workflow.initialize=false
 startup.display.initialize=true
-startup.display.initialize.drop=true
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
