--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -25,13 +25,13 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 startup.import.system.data=false
 
 startup.workflow.initialize=false
-startup.display.initialize=true
-startup.display.initialize.drop=true
+startup.display.initialize=false
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
 # -----------------------------------------------------------------------------
-maintenance.run=true
+maintenance.run=false
 
 # -----------------------------------------------------------------------------
 # SYSTEM DATA IMPORT
