--- a/src/environments/environment.uat.properties
+++ b/src/environments/environment.uat.properties
@@ -24,7 +24,7 @@ email.source=prism-uat-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.import.system.data=false
 
-startup.workflow.initialize=false
+startup.workflow.initialize=true
 startup.display.initialize=true
 startup.display.initialize.drop=true
 
