--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -62,7 +62,7 @@ xml.data.export.sftp.folder=
 # -----------------------------------------------------------------------------
 system.id=1
 system.name=PRiSM
-system.helpdesk=http://uclprism.freshdesk.com/
+system.helpdesk=http://alumenilimited.freshdesk.com/
 system.user.firstName=Alumeni
 system.user.lastName=PRiSM
 system.user.email=prism-local@alumeni.co.uk
