--- a/src/environments/environment.ucl.prod.properties
+++ b/src/environments/environment.ucl.prod.properties
@@ -24,8 +24,8 @@ email.source=prism-no-reply@alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.import.system.data=false
 
-startup.workflow.initialize=false
-startup.display.initialize=false
+startup.workflow.initialize=true
+startup.display.initialize=true
 startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
