--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -24,9 +24,9 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 startup.import.system.data=true
 
-startup.workflow.initialize=false
-startup.display.initialize=false
-startup.display.initialize.drop=false
+startup.workflow.initialize=true
+startup.display.initialize=true
+startup.display.initialize.drop=true
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
