--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -22,11 +22,11 @@ email.source=prism-local-no-reply@local.alumeni.co.uk
 # -----------------------------------------------------------------------------
 # START-UP
 # -----------------------------------------------------------------------------
-startup.import.system.data=true
+startup.import.system.data=false
 
 startup.workflow.initialize=false
 startup.display.initialize=false
-startup.display.initialize.drop=true
+startup.display.initialize.drop=false
 
 # -----------------------------------------------------------------------------
 # MAINTENANCE
