--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -75,6 +75,7 @@ system.default.email.content.directory=email/content/
 # -----------------------------------------------------------------------------
 integration.google.api.key=AIzaSyBs0D7C2wzrK3vL1tl5nZ8Vm3PvnvdrkYM
 integration.google.geocoding.code.import.data=true
+integration.google.places.api.uri=https://maps.googleapis.com/maps/api/place/details/
 integration.google.geocoding.api.uri=https://maps.googleapis.com/maps/api/geocode/
 integration.google.geocoding.api.day.batch.limit=250
 integration.google.geocoding.api.request.delay.ms=100
